# verifiablex402

./: .gitignore  Cargo.toml  Dockerfile  README.md  openapi.yaml  render.yaml  weights_output.txt
.github/workflows/: ci.yml
contracts/: foundry.toml
contracts/src/: IntegrityAttestation.sol
contracts/test/: IntegrityAttestation.t.sol
docs/adr/: 001-fixed-point-arithmetic.md  002-jolt-atlas-proof-system.md  003-synthetic-training-data.md
src/: auth.rs  cache.rs  config.rs  encoding.rs  enforcement.rs  indexer.rs  lib.rs  main.rs  metrics.rs  payment.rs  proving.rs  receipt.rs  server.rs  transaction.rs
src/models/: mod.rs  tx_integrity.rs
tests/: integration.rs
training-data/: export_to_rust.py  generate_synthetic.py  train_classifier.py  training_features.csv  validate_model.py
